Added a small text change to show no difference on Foundations repository.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   
 <footer>
   <!-- copyright info, secondary navigation -->
-  <p>&copy; 2017 || Jeremie Leverich</p>
+  <p>&copy; 2017 || Jeremie Leverich || <a href="mailto:jeremieleverich@outlook.com">jeremieleverich@outlook.com</a></p>
   
   <nav>
     <a href="#">Home</a>
